# mcp-uos

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  login_script.py  pyproject.toml  requirements.txt
.github/workflows/: publish-docker-image.yaml
.roo/: mcp.json
mcpuos/: __init__.py  __main__.py  mcp_server.py  models.py  website.py
tests/: search_and_fetch.py
