[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-uos"
version = "1.2.2"
description = "An MCP server providing tools for querying information about Osnabrück University"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Lars Kiesow", email = "lkiesow@uos.de" }]
keywords = ["mcp", "search", "fetch", "ai"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = [
  "all2md[pdf]",
  "beautifulsoup4",
  "fastmcp",
  "markdownify",
  "python-dotenv",
  "requests",
]

[project.urls]
Homepage = "https://github.com/virtuos/mcp-uos"
Repository = "https://github.com/virtuos/mcp-uos"

[project.scripts]
mcp-uos = "mcpuos.__main__:main"
